changed repositories on services in controllers