@@ -10,7 +10,6 @@ import java.util.ArrayList;
 import java.util.Arrays;
 import java.util.List;
 import java.util.Optional;
-import java.util.stream.Collectors;
 
 @Repository
 public class StubNewsRepository implements NewsRepository {
@@ -20,18 +19,18 @@ public class StubNewsRepository implements NewsRepository {
             new News(3L, "Технології", "Новинки в світі технологій", NewsCategory.TECHNOLOGY, LocalDate.parse("2024-10-18"))
     ));
 
-    private long nextId = 4L; // Лічильник для наступного ID
+    private long nextId = 4L;
 
     @Override
-    public List<News> getAllNews() {
-        return newsList;
+    public Optional<List<News>> getAllNews() {
+        return newsList.isEmpty() ? Optional.empty() : Optional.of(newsList);
     }
 
     @Override
     public Optional<List<News>> getAllNewsByCategory(NewsCategory category) {
         List<News> filteredNews = newsList.stream()
                 .filter(news -> news.getCategory().equals(category))
-                .collect(Collectors.toList());
+                .toList();
 
         return filteredNews.isEmpty() ? Optional.empty() : Optional.of(filteredNews);
     }
@@ -41,33 +40,18 @@ public class StubNewsRepository implements NewsRepository {
         List<News> filteredNews = newsList.stream()
                 .filter(news -> news.getTitle().toLowerCase().contains(keywords.toLowerCase()) ||
                         news.getContent().toLowerCase().contains(keywords.toLowerCase()))
-                .collect(Collectors.toList());
+                .toList();
 
         return filteredNews.isEmpty() ? Optional.empty() : Optional.of(filteredNews);
     }
 
-    @Override
-    public void deleteNewsById(Long id) {
-        newsList.removeIf(news -> news.getId().equals(id));
-    }
 
     @Override
-    public void addNews(News news) {
-        // Встановлюємо унікальний ID для нової новини
+    public void createNews(News news) {
         news.setId(nextId);
-        nextId++; // Збільшуємо лічильник для наступного ID
+        nextId++;
         newsList.add(news);
     }
-
-    @Override
-    public void updateNews(Long id, News updatedNews) {
-        for (int i = 0; i < newsList.size(); i++) {
-            News news = newsList.get(i);
-            if (news.getId().equals(id)) {
-                newsList.set(i, updatedNews); // Заміна старої новини новою
-                return;
-            }
-        }
-    }
 }
+
 
